@@ -18,7 +18,7 @@
  # AUTHOR - Adam Bishop - ahbishop@uvic.ca
  #       
  # For comments or questions please contact the above e-mail address 
- #
+ # or Ian Gable - igable@uvic.ca
  # 
 
 echo `cat /tmp/mdsresource.xml`
